<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:layout_margin="16dp"
    android:background="@drawable/dialog_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:textColor="@color/soft_font_gray"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/soft_font_gray"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="14sp"
        android:hint="@string/fill_title"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/soft_font_gray"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/input_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:padding="8dp"
        android:minLines="3"
        android:gravity="top"
        android:textSize="14sp"
        android:hint="@string/fill_description"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:textColor="@color/soft_font_gray"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/input_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:padding="16dp"
        android:tint="@color/white"
        android:background="@drawable/button_basic_10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/btn_calendar"
        app:layout_constraintBottom_toBottomOf="@id/btn_calendar"
        app:layout_constraintStart_toEndOf="@id/btn_calendar"
        android:layout_marginStart="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:padding="8dp"
        android:text="@string/start_time"
        android:textAllCaps="false"
        android:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_end_time"
        android:background="@drawable/button_basic_10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_calendar"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btn_start_time"
        app:layout_constraintTop_toBottomOf="@id/btn_start_time"
        app:layout_constraintStart_toStartOf="@id/btn_start_time"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="8dp"
        android:text="@string/start_time"
        android:textAllCaps="false"
        android:tint="@color/white"
        android:background="@drawable/button_basic_10dp"
        app:layout_constraintTop_toTopOf="@id/btn_start_time"
        app:layout_constraintStart_toEndOf="@id/btn_start_time"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btn_end_time"
        app:layout_constraintTop_toBottomOf="@id/btn_end_time"
        app:layout_constraintStart_toStartOf="@id/btn_end_time"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:paddingHorizontal="16dp"
        android:textColor="@color/basic_color"
        android:backgroundTint="@color/white"
        android:background="@drawable/button_basic_10dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add_task"
        app:layout_constraintTop_toBottomOf="@id/start_time"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:background="@drawable/button_basic_10dp"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>